# trading_engine

./: .gitignore  README.txt  buildProj.sh  buildWorld.sh  compile_all_on15.sh  doSymLinking.sh  obj_file_list.txt  recompile_all.sh
src/main/: CMakeLists.txt  Main.cpp
src/main/Common/: CMakeLists.txt
src/main/Common/ATU/: ContractManager.h  JsonContractReader.h  Toolbox.h
src/main/Common/Facilities/: MarkToMarket.cpp  ThreadHealthMonitor.cpp
src/main/Common/LowPriorityFacilities/: PriceForwarderToNextTier.cpp
src/main/Common/Math/: DaySma.cpp  FSMC1.cpp  FSMC1.h  FSMC2.h  GumbelCopula.h  KolmogorovSmirnov.cpp  LeastSqRegression.h  LinearSysSolver.cpp  LinearSysSolver.h  NumberPosition.cpp  OBLMA.h  OptMaster.hpp  PeriodSma.cpp  ProbMassFunc.h  SNYStat.cpp  Sma.hpp  StateMach.h  StateMach1.cpp  TickReturn.cpp  Wr.hpp
src/main/Common/Model/: fsm-trng.cpp
src/main/Common/ProbDistributionGeneration/: ProbDistributionGenerator.cpp
src/main/Common/SharedObjects/: MarketData.cpp  ProbDistributions.h  ShortTermAlpha.h  SystemConfig.h
src/main/Common/Strategies/: StrategyB2HK.h  StrategyB2US3.cpp  StrategyB2US3.h  StrategyB3.cpp  StrategyB3.h  StrategyB3US.h
src/main/Common/StrategyUtils/: StrategyConstants.cpp
src/main/Common/Util/: Acct.cpp  BarProvider.cpp  BarProvider.h  ContFut.cpp  CorrelMatrices.cpp  Exchange.h  HKFE.cpp  HKSE.h  OptionCtrt.cpp  RegularMiniCtrtManager.cpp  RegularMiniCtrtManager.h  SLowerBound.h  STool.h  TradeTickProvider.h  TradeWarehouse.cpp  TradingHours.cpp  ValidityChk.h
src/main/Common/VolSurfaceCalculation/: VolSurfCalculator.cpp
src/main/Legacy/: HKIntradaySeasonality.cpp.txt
src/main/atu_tcp_library/: ATU_Feed_Logger.h  ATU_Logger.h  ATU_TCPClient.h  CMakeLists.txt
src/main/bin_mdi_reader/: CMakeLists.txt  Main.cpp
src/main/cme_ilink/: CMakeLists.txt  README.txt  W80004N.cfg  cert_test_cmd_list.txt  fix_trader.cpp  order.h  run_cert_test_mode.sh
src/main/cme_mdp/: CMEInstruments.cfg  CMakeLists.txt  CmeMdApi.cpp  CmeMdApi.h  Main.cpp  README.txt  cme-md.cpp  error.c  error.h  run_cert_test_mode.sh
src/main/cme_mdp/cme/: AdminLogout16.h  FLOAT.h  HaltReason.h  InstAttribValue.h  MDEntryTypeBook.h  MDEntryTypeDailyStatistics.h  MDIncrementalRefreshSessionStatistics35.h  MDInstrumentDefinitionFuture27.h  MDInstrumentDefinitionOption41.h  MatchEventIndicator.h  PutOrCall.h  SecurityTradingStatus.h  SettlPriceType.h  SnapshotFullRefresh38.h
src/main/cme_mdp_kenny/: CMakeLists.txt  CmeMdApi.cpp  CmeMdApi.h  common.h
src/main/cme_mdp_kenny/cme/: AdminHeartbeat12.h  AggressorSide.h  DecimalQty.h  EventType.h  GroupSize.h  GroupSize8Byte.h  LegSide.h  MDEntryTypeStatistics.h  MDIncrementalRefreshDailyStatistics33.h  MDIncrementalRefreshTradeSummary42.h  MDInstrumentDefinitionSpread29.h  MDUpdateAction.h  MaturityMonthYear.h  PRICENULL.h  QuoteRequest39.h  SecurityStatus30.h  SecurityTradingEvent.h  SecurityUpdateAction.h
src/main/ctp_include/: error.txt
src/main/ctp_md/: CMakeLists.txt  CtpMd.cpp  CtpMd.h  Main.cpp
src/main/ctp_md_ord/: CMakeLists.txt  CtpError.cpp  CtpError.h  CtpMd.cpp  CtpMd.h  CtpOrd.cpp  CtpOrd.h  Main.cpp
src/main/ctp_ord/: ATU_CTP_OTI.cpp.txt  ATU_CTP_OTI.h.txt
src/main/ib_md_ord/: ATU_IB_ClientSocket_MDI.cpp  ATU_IB_ClientSocket_MDI.h  ATU_IB_ClientSocket_OTI.cpp  ATU_IB_ClientSocket_OTI.h  ATU_IB_Client_MDI.cpp  ATU_IB_Client_MDI.h  ATU_IB_Client_OTI.h  ATU_IB_MDI.cpp  ATU_IB_MDI.h  ATU_IB_OTI.cpp  ATU_IB_OTI.h  AtuContract.cpp  AtuContract.h  CMakeLists.txt  ContractManager.h  ContractReaderAdaptor.h  IB_OTI_main.cpp.txt  Main.cpp  MarketDepthData.cpp  MarketDepthData.h  Utility.cpp  Utility.h
src/main/ib_md_ord/lib/: Contract.h  EClientSocketBase.h  Order.h  TagValue.h
src/main/include/: ATU_Abstract_MDI.h  ATU_Abstract_OTI.h  ATU_ErrorMsgStruct.h  ATU_Feed_Logger.h  ATU_Logger.h  ATU_Timer.h  AtuContract.h  ConfigMgr.h  IniContractReader.h  JsonContractReader.h  LogStream.h  Toolbox.h
src/main/logger/: CMakeLists.txt  Logger.cpp  Logger.h  StdStreamLogger.cpp  StdStreamLogger.h
src/main/mcast_recorder/: CMakeLists.txt  Main.cpp  McastReceiver.cpp  McastReceiver.h
src/main/omd_cme/: CMakeLists.txt  Main.cpp  MainThread.cpp  MainThread.h  OMD_Message_Headers.cpp  OMD_Message_Headers.h  SharedObjects.cpp  SharedObjects.h  SystemConfig.cpp  SystemConfig.h  Terminal.cpp  Terminal.h  ThreadHealthMonitor.cpp  ThreadHealthMonitor.h  Util.cpp  Util.h
src/main/omd_cme/ChannelAggregation/: ChannelController.cpp  ChannelController.h  DataCompletenessInspector.cpp  DataCompletenessInspector.h  RTSClient.cpp  RTSClient.h
src/main/omd_cme/Container/: ExpandableCirBuffer.cpp  ExpandableCirBuffer.h  ExpandableCirBuffer4Msg.cpp  ExpandableCirBuffer4Msg.h  OrderBook.h
src/main/omd_cme/DataProcessing/: DataProcController.cpp  DataProcController.h  DataProcFunctions.cpp  DataProcFunctions.h  PreProcessor.cpp  PreProcessor.h  RealTimeProcessor.cpp  (+2 more)
src/main/omd_cme_common/: CMakeLists.txt
src/main/omd_common_test/: CMakeLists.txt  Main.cpp
src/main/omd_mdp/: CMakeLists.txt  Main.cpp
src/main/omd_mdp_common/: CMakeLists.txt
src/main/omdc/: CMakeLists.txt  Main.cpp
src/main/strategy_engine/: CMakeLists.txt
src/main/strategy_engine_common/: CMakeLists.txt
src/main/unit_tests/: CMakeLists.txt  Main.cpp
src/main/unit_tests_omd_mdp/: CMakeLists.txt  Main.cpp  TestExpandableCirBuffer.hpp  TestExpandableCirBuffer4Msg.hpp
src/main/util/: ATU_Abstract_MDI.h  ATU_Abstract_OTI.h  Acct.h  BinaryTools.cpp  BinaryTools.h  CME.h  CMakeLists.txt  CPnLHist.cpp  CommissionCalculator.cpp  Constants.h  ContFut.cpp  ContFut.h  CorrelMatrices.cpp  CorrelMatrices.h  DeriCtrt.cpp  DeriCtrt.h  ExpandableCirBuffer.cpp  ExpandableCirBuffer4Msg.cpp  FuturesCtrt.cpp  FuturesCtrt.h  OptionCtrt.h  PCH.h  PortChromosome.h  QuoteProvider.cpp  SDateTime.cpp  SDateTime.h  SFunctional.cpp  SFunctional.h  STool.cpp  STool.h  Tokenizer.cpp  Tokenizer.h  TradeTickProvider.cpp  TradingHours.cpp  ValidityChk.h  ZMQServerClient.cpp  ZMQServerClient.h
src/main/zmq_svr_clt/: CMakeLists.txt  Clt.cpp  Svr.cpp
(+1071 files in other folders)
