project(Common)
 
set(PANTHEIOS_INC /usr/local/pantheios/include
                  /usr/local/stlsoft/include)
set(atu_tcp_library_INC  ../atu_tcp_library)
set(Common_INC   ATU
                 Logger
                 Math
                 Model
                 PCH
                 Util
                 DataAggregation
                 Facilities
                 LowPriorityFacilities
                 OrderExecutionAlgo
                 ProbDistributionGeneration
                 SharedObjects
                 Strategies
                 StrategyTests
                 StrategyUtils
                 TechIndUpdating
                 VolSurfaceCalculation)

include_directories(${PANTHEIOS_INC} ${atu_tcp_library_INC} ${Common_INC})

add_library (${PROJECT_NAME} STATIC
                                    PCH/PCH.h
                                    Util/OHLC.h
                                    Util/ContFut.h
                                    Util/ValidityChk.h
                                    Util/TradeTick.h
                                    Util/BarProvider.h
                                    Util/HKFE.h
                                    Util/TradeWarehouse.h
                                    Util/FuturesCtrt.h
                                    Util/STool.h
                                    Util/HKSE.h
                                    Util/CorrelMatrices.h
                                    Util/OParam.h
                                    Util/CommissionCalculator.h
                                    Util/PParam.h
                                    Util/TradeTickProvider.h
                                    Util/DeriCtrt.h
                                    Util/PeriodicTask.h
                                    Util/Constants.h
                                    Util/TradingHours.h
                                    Util/QuoteProvider.h
                                    Util/SDateTime.h
                                    Util/Acct.h
                                    Util/STimer.h
                                    Util/BarAggregator.h
                                    Util/HKMA.h
                                    Util/VolSurfaces.h
                                    Util/NYSE.h
                                    Util/SFunctional.h
                                    Util/SException.h
                                    Util/Exchange.h
                                    Util/SystemState.h
                                    Util/RegularMiniCtrtManager.h
                                    Util/SLowerBound.h
                                    Util/Tokenizer.h
                                    Util/CME.h
                                    Util/IParam.h
                                    Util/CPnLHist.h
                                    Util/OptionCtrt.h
                                    Util/BestBidAskTrade.h
                                    Util/PortChromosome.h
                                    Util/CustType.h
                                    Util/OrderBook.h
                                    Logger/Logger.h
                                    ATU/GlobalVariables.h
                                    ATU/IniContractReader.h
                                    ATU/LogStream.h
                                    ATU/ATU_Abstract_AlgoI.h
                                    ATU/ContractManager.h
                                    ATU/ATU_Abstract_MDI.h
                                    ATU/ATU_Timer.h
                                    ATU/ContractReaderAdaptor.h
                                    ATU/ATU_Feed_Logger.h
                                    ATU/AtuContract.h
                                    ATU/ATU_Logger.h
                                    ATU/ATU_Abstract_OTI.h
                                    ATU/ParsedMarketData.h
                                    ATU/ATU_ErrorMsgStruct.h
                                    ATU/ConfigMgr.h
                                    ATU/JsonContractReader.h
                                    ATU/Toolbox.h
                                    Math/ProbMassFunc.h
                                    Math/KolmogorovSmirnov.h
                                    Math/CauchyDistribution.h
                                    Math/Bisection.h
                                    Math/TickReturn.h
                                    Math/StateMach2.h
                                    Math/FSMC1.h
                                    Math/FSMC2.h
                                    Math/StateMach.h
                                    Math/MeanAccumulator.h
                                    Math/LinRegr.h
                                    Math/PeriodSma.h
                                    Math/TrdTickAna.h
                                    Math/OBLMA.h
                                    Math/MACD.h
                                    Math/BlackScholes.h
                                    Math/LinearSysSolver.h
                                    Math/GKYZ.h
                                    Math/Dynamics.h
                                    Math/SgnlPrc.h
                                    Math/ProbDistrnFunc.h
                                    Math/RandomEngine.h
                                    Math/VolSurf.h
                                    Math/LeastSqRegression.h
                                    Math/StateMach1.h
                                    Math/GaussianDistribution.h
                                    Math/FSMC.h
                                    Math/FundlMdlPE.h
                                    Math/CountingFunction.h
                                    Math/SNYStat.h
                                    Math/NumberPosition.h
                                    Math/DaySma.h
                                    Math/GumbelCopula.h
                                    Math/Rsi.h
                                    StrategyUtils/StyCPnLHist.h
                                    StrategyUtils/StrategyConstants.h
                                    OrderExecutionAlgo/OrderExecutor.h
                                    Strategies/StrategyB2.h
                                    Strategies/StrategyB2US2.h
                                    Strategies/StrategyCMA.h
                                    Strategies/StrategyB2HK.h
                                    Strategies/StrategyB3US.h
                                    Strategies/StrategyB2US3.h
                                    Strategies/StrategyB3.h
                                    Strategies/StrategyB2US1.h
                                    Strategies/StrategyNIR1.h
                                    Strategies/StrategyBase.h
                                    DataAggregation/CTP/ThostFtdcMdApi.h
                                    DataAggregation/CTP/CTP_OT.h
                                    DataAggregation/CTP/ThostFtdcUserApiStruct.h
                                    DataAggregation/CTP/CTP_MD.h
                                    DataAggregation/CTP/ThostFtdcUserApiDataType.h
                                    DataAggregation/CTP/ThostFtdcTraderApi.h
                                    DataAggregation/MDIDataReceiver.h
                                    StrategyTests/StrategyR9.h
                                    StrategyTests/StrategyB1HKF.h
                                    StrategyTests/StrategyB1.h
                                    StrategyTests/StrategyTest.h
                                    StrategyTests/StrategyS11A.h
                                    StrategyTests/StrategyR7.h
                                    StrategyTests/PortfolioGenerator.h
                                    Facilities/TradingEngineMainThread.h
                                    Facilities/Terminal.h
                                    Facilities/MarkToMarket.h
                                    Facilities/ThreadHealthMonitor.h
                                    VolSurfaceCalculation/VolSurfCalculator.h
                                    ProbDistributionGeneration/ProbDistributionGenerator.h
                                    SharedObjects/SystemConfig.h
                                    SharedObjects/MarketData.h
                                    SharedObjects/PortfoliosAndOrders.h
                                    SharedObjects/ShortTermAlpha.h
                                    SharedObjects/HSIDailyHLRangeEstimation.h
                                    SharedObjects/TechIndicators.h
                                    SharedObjects/MDI_Acknowledgement.h
                                    SharedObjects/ProbDistributions.h
                                    LowPriorityFacilities/PriceForwarderToNextTier.h
                                    TechIndUpdating/TechIndUpdater.h
                                    StrategyUtils/StrategyConstants.cpp
                                    StrategyUtils/StyCPnLHist.cpp
                                    OrderExecutionAlgo/OrderExecutor.cpp
                                    Strategies/StrategyNIR1.cpp
                                    Strategies/StrategyB3US.cpp
                                    Strategies/StrategyB2.cpp
                                    Strategies/StrategyBase.cpp
                                    Strategies/StrategyB3.cpp
                                    Strategies/StrategyB2US2.cpp
                                    Strategies/StrategyB2HK.cpp
                                    Strategies/StrategyB2US3.cpp
                                    Strategies/StrategyCMA.cpp
                                    Strategies/StrategyB2US1.cpp
                                    DataAggregation/MDIDataReceiver.cpp
                                    DataAggregation/CTP/CTP_OT.cpp
                                    DataAggregation/CTP/CTP_MD.cpp
                                    StrategyTests/StrategyS11A.cpp
                                    StrategyTests/StrategyB1.cpp
                                    StrategyTests/StrategyR9.cpp
                                    StrategyTests/StrategyR7.cpp
                                    StrategyTests/StrategyB1HKF.cpp
                                    StrategyTests/StrategyTest.cpp
                                    StrategyTests/PortfolioGenerator.cpp
                                    Facilities/Terminal.cpp
                                    Facilities/TradingEngineMainThread.cpp
                                    Facilities/MarkToMarket.cpp
                                    Facilities/ThreadHealthMonitor.cpp
                                    VolSurfaceCalculation/VolSurfCalculator.cpp
                                    ProbDistributionGeneration/ProbDistributionGenerator.cpp
                                    SharedObjects/HSIDailyHLRangeEstimation.cpp
                                    SharedObjects/MDI_Acknowledgement.cpp
                                    SharedObjects/MarketData.cpp
                                    SharedObjects/SystemConfig.cpp
                                    SharedObjects/TechIndicators.cpp
                                    SharedObjects/ProbDistributions.cpp
                                    SharedObjects/PortfoliosAndOrders.cpp
                                    SharedObjects/ShortTermAlpha.cpp
                                    LowPriorityFacilities/PriceForwarderToNextTier.cpp
                                    TechIndUpdating/TechIndUpdater.cpp
                                    Util/SystemState.cpp
                                    Util/CommissionCalculator.cpp
                                    Util/TradingHours.cpp
                                    Util/DeriCtrt.cpp
                                    Util/PParam.cpp
                                    Util/Acct.cpp
                                    Util/Exchange.cpp
                                    Util/BestBidAskTrade.cpp
                                    Util/OParam.cpp
                                    Util/HKSE.cpp
                                    Util/VolSurfaces.cpp
                                    Util/HKMA.cpp
                                    Util/TradeTick.cpp
                                    Util/HKFE.cpp
                                    Util/PeriodicTask.cpp
                                    Util/ContFut.cpp
                                    Util/BarAggregator.cpp
                                    Util/RegularMiniCtrtManager.cpp
                                    Util/CME.cpp
                                    Util/Tokenizer.cpp
                                    Util/IParam.cpp
                                    Util/CPnLHist.cpp
                                    Util/OrderBook.cpp
                                    Util/STool.cpp
                                    Util/OptionCtrt.cpp
                                    Util/PortChromosome.cpp
                                    Util/Constants.cpp
                                    Util/OHLC.cpp
                                    Util/NYSE.cpp
                                    Util/CorrelMatrices.cpp
                                    Util/SFunctional.cpp
                                    Util/TradeTickProvider.cpp
                                    Util/BarProvider.cpp
                                    Util/SDateTime.cpp
                                    Util/QuoteProvider.cpp
                                    Util/TradeWarehouse.cpp
                                    Util/FuturesCtrt.cpp
                                    Model/fsm-trng.cpp
                                    Model/fsm-predict.cpp
                                    Logger/Logger.cpp
                                    Math/StateMach1.cpp
                                    Math/GKYZ.cpp
                                    Math/RandomEngine.cpp
                                    Math/LinearSysSolver.cpp
                                    Math/CauchyDistribution.cpp
                                    Math/VolSurf.cpp
                                    Math/SgnlPrc.cpp
                                    Math/Bisection.cpp
                                    Math/Rsi.cpp
                                    Math/KolmogorovSmirnov.cpp
                                    Math/FSMC2.cpp
                                    Math/LinRegr.cpp
                                    Math/LeastSqRegression.cpp
                                    Math/MACD.cpp
                                    Math/SNYStat.cpp
                                    Math/OBLMA.cpp
                                    Math/GaussianDistribution.cpp
                                    Math/CountingFunction.cpp
                                    Math/TickReturn.cpp
                                    Math/TrdTickAna.cpp
                                    Math/FundlMdlPE.cpp
                                    Math/MeanAccumulator.cpp
                                    Math/PeriodSma.cpp
                                    Math/DaySma.cpp
                                    Math/FSMC1.cpp
                                    Math/ProbMassFunc.cpp
                                    Math/GumbelCopula.cpp
                                    Math/BlackScholes.cpp
                                    Math/ProbDistrnFunc.cpp
                                    Math/Dynamics.cpp
                                    Math/NumberPosition.cpp
                                    Math/StateMach2.cpp
)
target_link_libraries(${PROJECT_NAME} atu_tcp_library)
